# sharifcup

./: .gitignore  README.md
robotic_logic/: CMakeLists.txt  Makefile  MovingObj.cpp  MovingObj.h  ShortestPath.cpp  ShortestPath.h  Vision.h  geometry.cpp  geometry.h  main.cpp
robotic_logic/Controller/: Controller.cpp  forceStop.py  rs232.h  talkToSetare.py
robotic_logic/Core/: Field.cpp  MovingObj.cpp  MovingObj.h  MovingObjTest.cpp  Region.cpp
robotic_logic/Include/: ColorObject.h  Controller.h  Field.h  Graph.h  MovingObj.h  Phase1.h  Region.h  ShortestPath.h  Vision.h  geometry.h  params.h
robotic_logic/Pathfinding/: ShortestPath.cpp  ShortestPath.h
robotic_logic/Phase1/: CMakeLists.txt  Phase1.cpp  start.cpp
robotic_logic/Phase1/goodColors/: black.txt  blue.txt  green.txt  red.txt  violet.txt  yellow.txt
robotic_logic/Tests/: GraphTest.cpp  MovingObjTest.cpp  a.out  geometryTest.cpp  help.txt  testXX.cpp
robotic_logic/Utility/: Graph.cpp  Graph.h  GraphTest.cpp  Grpah.cpp  clipper.cpp  geometry.cpp  geometry.h  params.cpp  testGenerator.py  visualizer.py
robotic_logic/Vision/: CMakeCache.txt  CMakeLists.txt  ColorObject.cpp  Makefile  RobotVision.py  Vision.cpp  Vision.h  cmake_install.cmake  testMain.cpp
