cmake_minimum_required(VERSION 2.8)
project( test )
find_package( OpenCV )
include_directories( ${OpenCV_INCLUDE_DIRS})
SET(SOURCE testMain.cpp Vision.cpp ../Utility/geometry.cpp ../Core/Field.cpp ../Core/MovingObj.cpp ../Core/Region.cpp)
SET(HEADER ../Include/Vision.h ../Include/Field.h ../Include/MovingObj.h )
add_executable( testMain ${HEADER} ${SOURCE})
target_link_libraries( testMain ${OpenCV_LIBS})
target_compile_features(testMain PRIVATE cxx_range_for)